Fix search appearance on Safari

--- a/src/components/search/search.scss
+++ b/src/components/search/search.scss
@@ -6,7 +6,7 @@
 
 .search__icon {
   position: absolute;
-  left: rem(16px);
+  left: rem(12px);
   top: 50%;
   transform: translateY(-50%);
 }
@@ -20,7 +20,7 @@
 
 .search--header {
   height: 3rem;
-  padding: 0.5rem 1rem 0.5rem 3rem;
+  padding: 0.5rem 1rem 0.5rem 2.75rem;
   border-radius: 0.25rem;
   width: 400px;
   margin-right: 1rem;
@@ -33,6 +33,7 @@
 .theme--light .search--header {
   background-color: $light-primary;
   color: $dark-base;
+  box-shadow: 0px 0px 0px 1px rgba($dark-base, 0.08) inset;
 }
 
 .theme--dark .search--header {
@@ -51,13 +52,19 @@
   display: block;
   margin: 0;
   padding: 0;
+  text-indent: 0;
+  text-align: left;
+  -webkit-appearance: none;
 }
 
 .search--header .search__input::placeholder {
-  text-transform: uppercase;
-  @include font-heading-demi();
-  letter-spacing: 1px;
-  line-height: 1.25rem;
+  line-height: inherit;
+  color: $grey;
+  text-indent: 0;
+}
+
+.search--header .search__input::-webkit-search-decoration {
+  display: none;
 }
 
 .search--large {
@@ -78,6 +85,7 @@
   display: block;
   margin: 0;
   padding: 0;
+  -webkit-appearance: none;
 }
 
 .theme--light .search--large {
